test/ui/tests/fail/unnecessary-attribute.rs
#[neon::export(async)]
async fn async_with_async() {}

fn main() {}
